[gd_scene load_steps=13 format=4 uid="uid://d3buvk5s70ta6"]

[ext_resource type="Script" uid="uid://bucrk8uatfxve" path="res://level_1.gd" id="1_jwv3a"]
[ext_resource type="Texture2D" uid="uid://bquy8dd80gkmv" path="res://blue.png" id="2_dopym"]
[ext_resource type="Texture2D" uid="uid://difoarnnix0te" path="res://MiniWorldSprites/Ground/Cliff-Water.png" id="3_ootpb"]
[ext_resource type="Texture2D" uid="uid://u212sugt8s8h" path="res://MiniWorldSprites/Ground/Shore.png" id="3_v38iq"]
[ext_resource type="Texture2D" uid="uid://c1ujvnxphxn8k" path="res://MiniWorldSprites/Ground/image_2025-11-01_21-54-14.png" id="4_v38iq"]
[ext_resource type="Texture2D" uid="uid://bymvkt3n37gh2" path="res://70x70.png" id="5_v8kj3"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_v38iq"]
texture = ExtResource("3_ootpb")
texture_region_size = Vector2i(70, 70)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_v8kj3"]
texture = ExtResource("3_v38iq")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_crycw"]
texture = ExtResource("4_v38iq")
texture_region_size = Vector2i(70, 70)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_v8kj3"]
tile_size = Vector2i(70, 70)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_v38iq")
sources/1 = SubResource("TileSetAtlasSource_v8kj3")
sources/3 = SubResource("TileSetAtlasSource_crycw")

[sub_resource type="LabelSettings" id="LabelSettings_v8kj3"]
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_crycw"]
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="Level" type="Node2D"]
script = ExtResource("1_jwv3a")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -21.0
offset_top = -251.0
offset_right = 1379.0
offset_bottom = 649.0

[node name="TileMapLayer" type="TileMapLayer" parent="Control"]
position = Vector2(700, 400)
tile_map_data = PackedByteArray("AAD//wAAAwAAAAAAAAD+/wAAAwAAAAAAAAD+/wEAAwAAAAAAAAD//wEAAwAAAAAAAAAAAAAAAwAAAAAAAAAAAP//AwAAAAAAAAD/////AwAAAAAAAAD+////AwAAAAAAAAAAAAEAAwAAAAAAAAD//wIAAwAAAAAAAAD+/wIAAwAAAAAAAAABAAIAAwAAAAAAAAAAAAIAAwAAAAAAAAABAAEAAwAAAAAAAAABAAAAAwAAAAAAAAABAP//AwAAAAAAAAD9/wAAAwAAAAAAAAD9////AwAAAAAAAAD+//7/AwAAAAAAAAD///7/AwAAAAAAAAAAAP7/AwAAAAAAAAABAP7/AwAAAAAAAAACAP//AwAAAAAAAAACAP7/AwAAAAAAAAD8/wEAAwAAAAAAAAD8/wAAAwAAAAAAAAD9/wEAAwAAAAAAAAD8////AwAAAAAAAAD9//7/AwAAAAAAAAD8//7/AwAAAAAAAAD9/wIAAwAAAAAAAAD8/wIAAwAAAAAAAAACAAIAAwAAAAAAAAACAAEAAwAAAAAAAAACAAAAAwAAAAAAAAADAAIAAwAAAAAAAAADAAEAAwAAAAAAAAADAAAAAwAAAAAAAAADAP//AwAAAAAAAAADAP7/AwAAAAAAAAD8/wUAAwAAAAAAAAD8/wQAAwAAAAAAAAD8/wMAAwAAAAAAAAD8//3/AwAAAAAAAAD8//z/AwAAAAAAAAD9//z/AwAAAAAAAAD9//3/AwAAAAAAAAD9/wMAAwAAAAAAAAD9/wQAAwAAAAAAAAD9/wUAAwAAAAAAAAD+//z/AwAAAAAAAAD+//3/AwAAAAAAAAD+/wMAAwAAAAAAAAD+/wQAAwAAAAAAAAD+/wUAAwAAAAAAAAD///z/AwAAAAAAAAD///3/AwAAAAAAAAD//wMAAwAAAAAAAAD//wQAAwAAAAAAAAD//wUAAwAAAAAAAAAAAPz/AwAAAAAAAAAAAP3/AwAAAAAAAAAAAAMAAwAAAAAAAAAAAAQAAwAAAAAAAAAAAAUAAwAAAAAAAAABAPz/AwAAAAAAAAABAP3/AwAAAAAAAAABAAMAAwAAAAAAAAABAAQAAwAAAAAAAAABAAUAAwAAAAAAAAACAPz/AwAAAAAAAAACAP3/AwAAAAAAAAACAAMAAwAAAAAAAAACAAQAAwAAAAAAAAACAAUAAwAAAAAAAAADAPz/AwAAAAAAAAADAP3/AwAAAAAAAAADAAMAAwAAAAAAAAADAAQAAwAAAAAAAAADAAUAAwAAAAAAAAD6//z/AwAAAAAAAAD7//z/AwAAAAAAAAD6//3/AwAAAAAAAAD7//3/AwAAAAAAAAD6//7/AwAAAAAAAAD7//7/AwAAAAAAAAD6////AwAAAAAAAAD7////AwAAAAAAAAD6/wAAAwAAAAAAAAD7/wAAAwAAAAAAAAD6/wEAAwAAAAAAAAD7/wEAAwAAAAAAAAD6/wIAAwAAAAAAAAD7/wIAAwAAAAAAAAD6/wMAAwAAAAAAAAD7/wMAAwAAAAAAAAD6/wQAAwAAAAAAAAD7/wQAAwAAAAAAAAD6/wUAAwAAAAAAAAD7/wUAAwAAAAAAAAA=")
tile_set = SubResource("TileSet_v8kj3")
script = ExtResource("1_jwv3a")

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1080.0
offset_top = 200.0
offset_right = 1158.0
offset_bottom = 278.0
theme_override_icons/icon = ExtResource("5_v8kj3")

[node name="Button2" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1080.0
offset_top = 112.0
offset_right = 1158.0
offset_bottom = 190.0
theme_override_icons/icon = ExtResource("5_v8kj3")

[node name="Button3" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1256.0
offset_top = 200.0
offset_right = 1334.0
offset_bottom = 278.0
theme_override_icons/icon = ExtResource("5_v8kj3")

[node name="Button5" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1168.0
offset_top = 112.0
offset_right = 1246.0
offset_bottom = 190.0
theme_override_icons/icon = ExtResource("5_v8kj3")

[node name="Button6" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1256.0
offset_top = 112.0
offset_right = 1334.0
offset_bottom = 190.0
theme_override_icons/icon = ExtResource("5_v8kj3")

[node name="Button7" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1080.0
offset_top = 288.0
offset_right = 1158.0
offset_bottom = 366.0
theme_override_icons/icon = ExtResource("5_v8kj3")

[node name="Button8" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1168.0
offset_top = 288.0
offset_right = 1246.0
offset_bottom = 366.0
theme_override_icons/icon = ExtResource("5_v8kj3")

[node name="Button9" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1256.0
offset_top = 288.0
offset_right = 1334.0
offset_bottom = 366.0
theme_override_icons/icon = ExtResource("5_v8kj3")

[node name="Button10" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1166.0
offset_top = 553.0
offset_right = 1244.0
offset_bottom = 631.0
theme_override_icons/icon = ExtResource("5_v8kj3")

[node name="Button4" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1168.0
offset_top = 200.0
offset_right = 1238.0
offset_bottom = 270.0
theme_override_icons/icon = ExtResource("5_v8kj3")

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 1086.0
offset_top = 13.0
offset_right = 1326.0
offset_bottom = 85.0
theme_override_font_sizes/font_size = 20
text = "Выбери ход"
label_settings = SubResource("LabelSettings_v8kj3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Blue" type="Sprite2D" parent="Control"]
position = Vector2(630, 470.25)
scale = Vector2(0.58333325, 1.2424513)
texture = ExtResource("2_dopym")

[node name="BoxContainer" type="BoxContainer" parent="."]
anchors_preset = -1
offset_left = 335.0
offset_top = 330.0
offset_right = 835.0
offset_bottom = 830.0
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 2.08
vertical = true

[node name="Control" type="Control" parent="BoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="70x70" type="Sprite2D" parent="BoxContainer/Control"]
position = Vector2(250, 93.00003)
scale = Vector2(4.3285713, 1.9714291)
texture = ExtResource("5_v8kj3")

[node name="head" type="Label" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "INHERIT"
label_settings = SubResource("LabelSettings_crycw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="bodytext" type="Label" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "inheritinheritinheritinheritinherit
inheritinheritinheritinheritinherit
inheritinheritinheritinheritinherit"
label_settings = SubResource("LabelSettings_crycw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control2" type="Control" parent="BoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="BoxContainer/Control2"]
layout_mode = 0
offset_top = 68.0
offset_right = 500.0
offset_bottom = 91.0

[node name="Button2" type="Button" parent="BoxContainer/Control2"]
layout_mode = 0
offset_left = 1.0
offset_top = 25.0
offset_right = 501.0
offset_bottom = 50.0

[connection signal="pressed" from="Control/Button10" to="." method="_on_button_10_pressed"]
[connection signal="hidden" from="BoxContainer" to="." method="_on_box_container_hidden"]
[connection signal="pressed" from="BoxContainer/Control2/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="BoxContainer/Control2/Button2" to="." method="_on_button_2_pressed"]
